<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mon_prototype</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="julien@todo.todo">julien</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>ros_gz_sim</build_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <build_depend>ros2_control</build_depend>
  <exec_depend>ros2_control</exec_depend>
  <build_depend>urdf_launch</build_depend>
  <exec_depend>urdf_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
